funland/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
    # renovate: image=lscr.io/linuxserver/radarr
    app.kubernetes.io/version: "6.4.4.10685-ls319"
    app.kubernetes.io/component: media-manager
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  ports:
    - port: 7878
      targetPort: 7878
